{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 140,
  "lineage": "fb508309-2a0b-9d11-3371-06f54432685c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-hussein",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d235c4cac0684a28",
            "association_id": "eipassoc-0252078f8205e169d",
            "domain": "vpc",
            "id": "eipalloc-0d235c4cac0684a28",
            "network_border_group": "us-west-1",
            "network_interface": "eni-09a6e2feffeb787df",
            "private_dns": "ip-10-0-0-42.us-west-1.compute.internal",
            "private_ip": "10.0.0.42",
            "public_dns": "ec2-54-67-44-103.us-west-1.compute.amazonaws.com",
            "public_ip": "54.67.44.103",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hussein-ec2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8a762cb0c50254",
            "arn": "arn:aws:ec2:us-west-1:958021034198:instance/i-094e11a48efa4e237",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094e11a48efa4e237",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017d0be07baec4d06",
            "private_dns": "ip-10-0-1-53.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-001d09537e3d0b88e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a20bf6df73ccab49",
            "tags": {
              "Name": "private-instance"
            },
            "tags_all": {
              "Name": "private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c79959d98f32701"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-hussein-private",
            "aws_subnet.my-subnet-hussein",
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hussein-ec2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8a762cb0c50254",
            "arn": "arn:aws:ec2:us-west-1:958021034198:instance/i-01b15a03fb67f40f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b15a03fb67f40f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fcc916c5cf2ea4bf",
            "private_dns": "ip-10-0-0-184.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.184",
            "public_ip": "13.57.241.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-002e71c3a927bff1e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8cf4287d213b9cc",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d7ffdff48bcadfe"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-hussein-public",
            "aws_subnet.my-subnet-hussein",
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hussein-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:internet-gateway/igw-07a97ff2b1faa31e6",
            "id": "igw-07a97ff2b1faa31e6",
            "owner_id": "958021034198",
            "tags": {
              "Name": "Hussein-gateway"
            },
            "tags_all": {
              "Name": "Hussein-gateway"
            },
            "vpc_id": "vpc-0fc9a79d59f778ba8"
          },
          "dependencies": [
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hussein-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d235c4cac0684a28",
            "connectivity_type": "public",
            "id": "nat-0689a1adb856e9e78",
            "network_interface_id": "eni-09a6e2feffeb787df",
            "private_ip": "10.0.0.42",
            "public_ip": "54.67.44.103",
            "subnet_id": "subnet-0b8cf4287d213b9cc",
            "tags": {
              "Name": "hussein-nat-gateway"
            },
            "tags_all": {
              "Name": "hussein-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-hussein",
            "aws_internet_gateway.hussein-gw",
            "aws_subnet.my-subnet-hussein",
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-husseingh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:route-table/rtb-03e140de2cdce9186",
            "id": "rtb-03e140de2cdce9186",
            "owner_id": "958021034198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0689a1adb856e9e78",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc9a79d59f778ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-hussein",
            "aws_internet_gateway.hussein-gw",
            "aws_nat_gateway.hussein-nat",
            "aws_subnet.my-subnet-hussein",
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-husseingh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:route-table/rtb-0c51c4f1448b8eb11",
            "id": "rtb-0c51c4f1448b8eb11",
            "owner_id": "958021034198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a97ff2b1faa31e6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc9a79d59f778ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hussein-gw",
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0281f31dd2d521647",
            "route_table_id": "rtb-0c51c4f1448b8eb11",
            "subnet_id": "subnet-0b8cf4287d213b9cc"
          },
          "dependencies": [
            "aws_internet_gateway.hussein-gw",
            "aws_route_table.public-husseingh",
            "aws_subnet.my-subnet-hussein",
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035396c3c28616f90",
            "route_table_id": "rtb-03e140de2cdce9186",
            "subnet_id": "subnet-0a20bf6df73ccab49"
          },
          "dependencies": [
            "aws_eip.elastic-ip-hussein",
            "aws_internet_gateway.hussein-gw",
            "aws_nat_gateway.hussein-nat",
            "aws_route_table.private-husseingh",
            "aws_subnet.my-subnet-hussein",
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-hussein-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:security-group/sg-01c79959d98f32701",
            "description": "Private security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c79959d98f32701",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-private-access",
            "name_prefix": "",
            "owner_id": "958021034198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Hussein-Private"
            },
            "tags_all": {
              "Name": "SG-Hussein-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc9a79d59f778ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-hussein-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:security-group/sg-04d7ffdff48bcadfe",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d7ffdff48bcadfe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-public-access",
            "name_prefix": "",
            "owner_id": "958021034198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Hussein-Public"
            },
            "tags_all": {
              "Name": "SG-Hussein-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc9a79d59f778ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet-hussein",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:subnet/subnet-0b8cf4287d213b9cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8cf4287d213b9cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958021034198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0fc9a79d59f778ba8"
          },
          "dependencies": [
            "aws_vpc.admin-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:subnet/subnet-0a20bf6df73ccab49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a20bf6df73ccab49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958021034198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0fc9a79d59f778ba8"
          },
          "dependencies": [
            "aws_vpc.admin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "admin-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:vpc/vpc-0fc9a79d59f778ba8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053d3b6e86ace968f",
            "default_route_table_id": "rtb-0a6371a423ca60d7c",
            "default_security_group_id": "sg-03a192b43a5898ee0",
            "dhcp_options_id": "dopt-031689a3e0eb1745f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc9a79d59f778ba8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6371a423ca60d7c",
            "owner_id": "958021034198",
            "tags": {
              "Name": "Hussein-vpc"
            },
            "tags_all": {
              "Name": "Hussein-vpc"
            }
          }
        }
      ]
    }
  ]
}